[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
description = "A simple and flexible command-line todo application built with Rust."
repository = "https://github.com/adrior11/todo"
readme = "README.md"
keywords = ["todo", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"
dirs = "5.0.1"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"]}
rlua = "0.20.1"
